# pyspark-cdm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
pyspark_cdm/: __init__.py  catalog.py  datetime_parser.py  entity.py  exceptions.py  manifest.py  reader.py  utils.py
tests/: conftest.py  consts.py
tests/fixtures/: corpus.py  datetime_parser.py  entity.py  manifest.py  reader.py  spark.py
tests/samples/manifest/Tables/: Tables.manifest.cdm.json
tests/samples/manifest/Tables/Common/: Common.manifest.cdm.json
tests/samples/manifest/Tables/Common/Customer/: Customer.manifest.cdm.json
tests/samples/manifest/Tables/Common/Customer/Main/: CustTable.cdm.json  CustTable.manifest.cdm.json  EmptyTable.cdm.json  Main.manifest.cdm.json
tests/samples/manifest/Tables/Common/Customer/Main/CustTable/: CUSTTABLE_00001.csv  index.json
tests/samples/manifest/Tables/Common/Customer/Main/EmptyTable/: index.json
tests/samples/model/: model.json
tests/samples/model/example/: 1.csv
tests/samples/model/example/Snapshot/: 1_1690183552.csv
tests/test_pyspark_cdm/: test_catalog.py  test_datetime_parser.py  test_entity.py  test_manifest.py  test_reader.py  test_utils.py
