[tool.poetry]
name = "pyspark-cdm"
version = "0.1.1"
description = "Use pyspark to read CDM entities."
authors = ["JulesHuisman <jules.huisman@quantile.nl>"]
readme = "README.md"
packages = [{ include = "pyspark_cdm" }]

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
commondatamodel-objectmodel = { git = "https://github.com/quantile-development/CDM.git", branch = "master", subdirectory = "objectModel/Python" }
nest-asyncio = "^1.5.6"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pyspark = "^3.4.1"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::DeprecationWarning"]
